--- a/src/app/Module/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/Module/dashboard-admin/dashboard-admin.component.html
@@ -69,21 +69,14 @@
 <!-- SIDEBAR -->
 <!-- NAVBAR -->
 <nav class="d-flex justify-content-between w-50 border-2 mx-auto">
-    <div class="navDash">
-        <i class='bx bx-menu'></i>
-        <a href="#" class="nav-link">Bienvenue</a>
-    </div>
-    <div class="navDash">
-        <input type="checkbox" id="switch-mode" hidden>
-        <label for="switch-mode" class="switch-mode"></label>
-        <a class="notification">
-            <i class='bx bxs-bell' style="color: #308AA7;"></i>
-            <span class="num" style="color: #E75761;">8</span>
-        </a>
-        <a class="profile">
-            <img
-                src="">
-        </a>
-    </div>
+    <nav class="navbar bg-body-tertiary border-black">
+        <div class="container-fluid">
+          <a class="navbar-brand">Navbar</a>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
 </nav>
 <!-- NAVBAR -->
