--- a/src/app/Restaurateur/menu/menu.component.html
+++ b/src/app/Restaurateur/menu/menu.component.html
@@ -2,7 +2,7 @@
 
 <!-- debut du contenu de la page blog dashboard admin -->
 <div>
-    <h3 class="text-center mt-2 fw-bold titremere-blog">Listes des blogs</h3>
+    <h3 class="text-center mt-2 fw-bold titremere-blog">Listes des plats</h3>
     <div class="d-flex justify-content-between">
         <button class="btn fw-bold  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Ajouter un plat</button>
         <div class="search">
