--- a/src/app/Administrateur/accueil-admin/accueil-admin.component.html
+++ b/src/app/Administrateur/accueil-admin/accueil-admin.component.html
@@ -1,1 +1,53 @@
-<p>accueil-admin works!</p>
+<div class="row">
+    <div class="col-xl-3 col-sm-6 col-12"> 
+      <div class="card">
+        <div class="card-content">
+          <div class="card-body">
+            <div class="media d-flex">
+              <div class="align-self-center">
+                <i class="bi bi-person-standing fw-bold display-2"></i>
+              </div>
+              <div class="media-body text-right">
+                <h3>278</h3>
+                <span>New Posts</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 col-12">
+      <div class="card">
+        <div class="card-content">
+          <div class="card-body">
+            <div class="media d-flex">
+              <div class="align-self-center">
+                <i class="bi bi-houses fw-bold display-2"></i>
+              </div>
+              <div class="media-body text-right">
+                <h3>156</h3>
+                <span>New Comments</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 col-12">
+      <div class="card">
+        <div class="card-content">
+          <div class="card-body">
+            <div class="media d-flex">
+              <div class="align-self-center">
+                <i class="bi bi-currency-exchange fw-bold display-2"></i>             
+             </div>
+              <div class="media-body text-right">
+                <h3>64.89 %</h3>
+                <span>Bounce Rate</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
