--- a/src/app/Restaurateur/menu/menu.component.css
+++ b/src/app/Restaurateur/menu/menu.component.css
@@ -1,12 +1,19 @@
+:root{
+    --fraise:#FFA07A;
+    --choco:#5D3C22;
+    --creame:#F8F3C6;
+    --argent:#F1F2F3;
+}
+
 .titremere-blog{
-    color: #308AA7;
+    color: #5D3C22;
 }
 .carte-blog-admin{
     /* width: 900px; */
     height: auto;
 }
 .iconsearch {
-    background-color: #E75761;
+    background-color: #FFA07A;
     color: white;
 }
 
@@ -14,43 +21,44 @@
     color: white;
 }
 .boutonajouter-blog{
-   background-color: #E75761;
+   background-color: #FFA07A;
    color: white;
-   border: 2px solid #E75761 ;
+   border: 2px solid #FFA07A ;
 }
 
 .carte-blog-admin{
-    border: 2px solid #E75761;
+    border: 2px solid #FFA07A;
     padding: 0;
 }
 .boutoncherchemoi-article{
    width: 40px;
-   background-color: #E75761;
+   background-color: #FFA07A;
    color: white;
-   border: 2px solid #E75761 ;
+   border: 2px solid #FFA07A ;
 }
 .inputrecherchemoi-article{
-    border: 2px solid #E75761 ;
-    box-shadow: #E75761;
+    border: 2px solid #FFA07A ;
+    box-shadow: #FFA07A;
 }
 .boutonmodif-blog{
-    background-color: #085B75;
-    color: white;
+    background-color: #F8F3C6;
+    border: 1px solid #F8F3C6;
+    color: black;
 }
 .boutondetails-blog{
-    background-color: #308AA7;
+    background-color: #5D3C22;
     color: white;
 }
 .boutonsupprim-blog{
-    background-color: #E75761;
+    background-color: #FFA07A;
     color: white;
 }
 .boutonpubliermodel-blog{
-    background-color: #308AA7;
+    background-color: #5D3C22;
     color: white;
 }
 .boutonannulermodel-blog{
-    background-color: #E75761;
+    background-color: #FFA07A;
     color: white;
 }
 .articleinput-blog{
@@ -74,7 +82,7 @@
 }
 
 .pagination .active {
-    background-color: #E75761 !important;
+    background-color: #FFA07A !important;
     color: white !important;
 }
 .limited-height {
@@ -86,14 +94,14 @@
     -webkit-line-clamp: 1; /* Nombre de lignes à afficher */
   }
 .titre-carte-contact{
-    /* color: #308AA7; */
+    /* color: #5D3C22; */
     color: white;
-    background-color: #E75761;
+    background-color: #FFA07A;
     font-weight: 700;
     font-size: larger;
    }
 .titremere-contact{
-       color: #308AA7;
+       color: #5D3C22;
    }
 
 @media screen and (max-width:1200px) {
@@ -102,43 +110,43 @@
 /* **************************************************************************************************************************** */
 
 .ajoutArticle input{
-    border: 1px solid #E75761;
+    border: 1px solid #FFA07A;
 }
 
 .btn-add{
-    background-color: #308AA7 !important;
+    background-color: #5D3C22 !important;
     color: white;
     font-weight: bold !important;
 }
 
 .titreAjout, .titreMdfArticle,.titreDetail{
-    color: #E75761;
+    color: #FFA07A;
     font-weight: bold;
 }
 
 .btn-closeAjout{
-    background-color: #E75761;
+    background-color: #FFA07A;
     color: white;
     border-radius: 50%;
 }
 
 .mdfArticle input,textarea{
-    border: 1px solid #E75761;
+    border: 1px solid #FFA07A;
 }
 
 .btnUpdate{
-    background-color: #308AA7 !important;
+    background-color: #5D3C22 !important;
     color: white;
     font-weight: bold;
 }
 
 .btnAnnuler{
-    background-color: #E75761 !important;
+    background-color: #FFA07A !important;
     color: white;
     font-weight: bold;
 }
 
 .btnCloseDetail{
-    background-color: #E75761;
+    background-color: #FFA07A;
     color: white;
 }
