--- a/src/app/Utilisateur/accueil/accueil.component.css
+++ b/src/app/Utilisateur/accueil/accueil.component.css
@@ -26,10 +26,13 @@
     border: 2px solid #5D3C22;
     font-size: 12px;
 }
-.boutonCommandeDts{
+.boutonCommandeDts , .boutonVoirDts{
     background-color: #FFA07A;
     color: white;
     border: 1px solid #FFA07A;
+}
+.boutonVoirDts{
+    font-size: medium;
 }
 .active {
     background-color: #FFA07A !important;
@@ -38,6 +41,7 @@
 }
 .carteNoscible{
     width: 100%;
+    height: 35%;
     margin: 0 auto;
     background-color: #F8F3C6;
     border: 1px solid #F8F3C6
@@ -56,3 +60,55 @@
  color: #FFA07A;
  
 }
+.circles {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 40vh;
+    animation: slideCircles 20s linear infinite;
+}
+
+.cerclemini {
+    width: 125px;
+    height: 142px;
+    /* border-radius: 100%; */
+    overflow: hidden;
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between; 
+    text-align: center; 
+    background-color: white;
+    box-sizing: border-box;
+    flex: 0 0 auto;
+}
+
+.cerclemini img {
+    /* width: 100%;  */
+    width: 125px;
+    height: 125px;
+    border-radius: 100%; 
+}
+
+.cerclemini span {
+    /* padding: 14px; */
+    text-align: center;
+    align-self: center;
+}
+
+
+@keyframes slideCircles {
+    0% {
+        transform: translateX(0%);
+    }
+
+    50% {
+        transform: translateX(-50%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+
+
