--- a/src/app/Utilisateur/accueil/accueil.component.html
+++ b/src/app/Utilisateur/accueil/accueil.component.html
@@ -13,6 +13,53 @@
       </div>
     </div>
   </div>
+<!-- section type de restaurant -->
+<div class="border-black" id="restotype">
+  <div class="d-flex justify-content-between">
+    <h3>Différentes types de restaurants</h3>
+    <div class="d-flex justify-content-between">
+      <p>Voir plus</p>
+      <p><i class="bi bi-chevron-left" data-bs-target="#restotype" data-bs-slide="prev"></i><p>
+      <p><i class="bi bi-chevron-right" data-bs-target="#restotype" data-bs-slide="next"></i></p>
+    </div>
+  </div>
+<div class="circles typeResto">
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2016/01/22/02/13/meat-1155132_640.jpg" alt="" class>
+    <span class="">Dibiterie</span>
+  </div>
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2020/02/15/20/38/noodles-4851996_640.jpg" alt="">
+    <span class="">Tangana</span>
+  </div>
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2012/03/02/00/29/beef-20678_640.jpg" alt="">
+    <span class="">Fast-food</span>
+  </div>
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2016/11/29/09/00/doughnuts-1868573_640.jpg" alt="">
+    <span class="">Patisserie</span>
+  </div>
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2016/01/22/02/13/meat-1155132_640.jpg" alt="" class>
+    <span class="">Dibiterie</span>
+  </div>
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2020/02/15/20/38/noodles-4851996_640.jpg" alt="">
+    <span class="">Tangana</span>
+  </div>
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2012/03/02/00/29/beef-20678_640.jpg" alt="">
+    <span class="">Fast-food</span>
+  </div>
+  <div class="cerclemini">
+    <img src="https://cdn.pixabay.com/photo/2016/11/29/09/00/doughnuts-1868573_640.jpg" alt="">
+    <span class="">Patisserie</span>
+  </div>
+</div>
+</div>
+
+<!-- section type de restaurant -->
 
 <!-- section du resto mise en avant -->
 <div class="my-4">
@@ -92,82 +139,87 @@
   </div>
 </div>
 <!-- section du resto mise en avant -->
+
 <!-- section du resto petit a propos -->
     <div class="card mb-3 carteNoscible">
         <div class="row g-0">
-          <div class="col-md-4">
-            <img src="../../../assets/about-img.png.png" class="w-50" alt="...">
+          <div class="col-md-4 d-flex justify-content-center align-items-center">
+            <img src="../../../assets/about-img.png.png" class="w-50 h-75 " alt="...">
           </div>
           <div class="col-md-8 my-5">
             <div class="card-body">
               <h3 class="card-title">Nous sommes EesyLeek</h3>
               <p class="card-text my-5">EasyLeek, leader de la restauration rapide, propose une expérience culinaire exceptionnelle grâce à une sélection diversifiée de restaurants sous sa bannière. Chaque établissement incarne l'innovation, la qualité des ingrédients et la créativité, redéfinissant ainsi les normes de ce secteur. Notre mission est de rendre une cuisine de qualité accessible à tous, en offrant des plats délicieux et équilibrés avec un service rapide et efficace.
               </p>
+              <button class="boutonVoirDts rounded-4 ">voir plus</button> 
             </div>
-            <div class="d-flex justify-content-center">
-                <button class="bnt btn-dark">voir plus</button>    
+            <div>
+                   
             </div>
           </div>
         </div>
       </div>
 <!-- section du resto petit a propos -->
+
 <!-- section du resto degustation -->
-    <div class="card mb-3 carteRestoNekh shadow-sm">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <div class="card-body">
-              <h3 class="card-title titreCartenekh">Meilleur offres 
-              <br> <span>Sandwiches </span></h3>
-              <p class="card-text">Profitez de la grande taille des sandwichs. Complet
-                votre repas avec la tranche parfaite de sandwichs.
-                                
-              </p>
-            </div>
-            <div class="d-flex justify-content-center">
-                <button class="bnt btn-dark btnpasser">Passer une commande</button>    
-            </div>
-          </div>
-          <div class="col-md-8">
-            <img src="../../../assets/crispy-sandwiches.png.png" class="img-fluid rounded-start" alt="...">
-          </div>
+<div>
+  <div class="card mb-3 carteRestoNekh shadow-sm ">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <div class="card-body">
+          <h3 class="card-title titreCartenekh">Meilleur offres 
+          <br> <span>Sandwiches </span></h3>
+          <p class="card-text">Profitez de la grande taille des sandwichs. Complet
+            votre repas avec la tranche parfaite de sandwichs.
+                            
+          </p>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="boutonCommandeDts">Passer une commande</button>    
         </div>
       </div>
-    <div class="card mb-3 carteRestoNekh shadow-sm">
-        <div class="row g-0">
-          <div class="col-md-8">
-                <img src="../../../assets/maigua 1.png" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-4">
-            <div class="card-body">
-              <h3 class="card-title titreCartenekh">Célébrer les fêtes  <br> <span>avec
-                Frites , brossette.. </span></h3>
-              <p class="card-text">Obtenez le meilleur poulet frit enduit d'une lèvre   saveur de piment citronné. Découvrez le meilleur offres pour le poulet frite
-             </p>
-            </div>
-            <div class="d-flex justify-content-center">
-                <button class="bnt btn-dark btnpasser">Passer une commande</button>    
-            </div>
-          </div>
+      <div class="col-md-8">
+        <img src="../../../assets/crispy-sandwiches.png.png" class="img-fluid rounded-start" alt="...">
+      </div>
+    </div>
+  </div>
+<div class="card mb-3 carteRestoNekh shadow-sm">
+    <div class="row g-0">
+      <div class="col-md-8">
+            <img src="../../../assets/maigua 1.png" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-4">
+        <div class="card-body">
+          <h3 class="card-title titreCartenekh">Célébrer les fêtes  <br> <span>avec
+            Frites , brossette.. </span></h3>
+          <p class="card-text">Obtenez le meilleur poulet frit enduit d'une lèvre   saveur de piment citronné. Découvrez le meilleur offres pour le poulet frite
+         </p>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="boutonCommandeDts">Passer une commande</button>    
         </div>
       </div>
-    <div class="card mb-3 carteRestoNekh shadow-sm ">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <div class="card-body">
-              <h3 class="card-title titreCartenekh">Comme au bon vieux temps , <br> <span> autour d'un délicieux plat</span>
-              </h3>
-              <p class="card-text">nous nous retrouvons pour savourer les saveurs authentiques et partager des moments conviviaux
-              </p>
-            </div>
-            <div class="d-flex justify-content-center">
-                <button class="bnt btn-dark btnpasser">Passer une commande</button>    
-            </div>
-          </div>
-          <div class="col-md-8">
-            <img src="../../../assets/thiep.png" class="img-fluid rounded-start" alt="...">
-          </div>
+    </div>
+  </div>
+<div class="card mb-3 carteRestoNekh shadow-sm ">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <div class="card-body">
+          <h3 class="card-title titreCartenekh">Comme au bon vieux temps , <br> <span> autour d'un délicieux plat</span>
+          </h3>
+          <p class="card-text">nous nous retrouvons pour savourer les saveurs authentiques et partager des moments conviviaux
+          </p>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="boutonCommandeDts">Passer une commande</button>    
         </div>
       </div>
+      <div class="col-md-8">
+        <img src="../../../assets/thiep.png" class="img-fluid rounded-start" alt="...">
+      </div>
+    </div>
+  </div>
+</div>
 <!-- section du resto degustation -->
-<app-footer></app-footer>
+
 
