--- a/src/app/Administrateur/categorie/categorie.component.html
+++ b/src/app/Administrateur/categorie/categorie.component.html
@@ -1,1 +1,34 @@
-<p>categorie works!</p>
+<div class="card w-75"style="margin-top:8%;border:2px solid red;margin-left:15%;border:1px solid #F7E801;">
+    <div class="card-body">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">#</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">First</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Last</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
