--- a/src/app/Restaurateur/commande/commande.component.html
+++ b/src/app/Restaurateur/commande/commande.component.html
@@ -1,1 +1,60 @@
-<p>commande works!</p>
+<div>
+    <h3 class="text-center mt-2 fw-bold titremere-blog">Les commandes</h3>
+    <div class="d-flex justify-content-between">
+        <div>
+            <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">En attente</button>
+            <button class="btn fw-bold me-3  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">En cours</button>
+            <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Livraison</button>
+            <button class="btn fw-bold boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Termine</button>
+        </div>
+        <div class="search">
+          <div class="input-group mb-3">
+              <input type="text" class="form-control inputPorteur" placeholder="Chercher une commande">
+              <button class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></button>
+          </div>
+      </div>
+    </div>
+  </div>
+
+<div class="card w-75"style="margin-top:8%;border:2px solid red;margin-left:15%;border:1px solid #ffa07a;">
+    <div class="card-body">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold; color: white;">Nom client</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold; color: white;">Nombres</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold; color: white; ">Statut</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold; color: white;">Prix Total</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold; color: white;">Etat</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold; color: white;">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Abdou Diop </th>
+            <td class="">1</td>
+            <td>A livre</td>
+            <td>2000 fcfa</td>
+            <td>En attente</td>
+            <td><i class="bi bi-pencil-square display-6"></i></td>
+          </tr>
+          <tr>
+            <th scope="row">Tarib Sow</th>
+            <td class="" >2</td>
+            <td>A livre</td>
+            <td>1500 fcfa</td>
+            <td>En attente</td>
+            <td><i class="bi bi-pencil-square display-6"></i></td>
+          </tr>
+          <tr>
+            <th scope="row">Alain Sall</th>
+            <td class="">3</td>
+            <td>A livre</td>
+            <td>3000 fcfa </td>
+            <td>En attente</td>
+            <td><i class="bi bi-pencil-square display-6"></i></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
