--- a/src/app/Module/login/login.component.html
+++ b/src/app/Module/login/login.component.html
@@ -1,40 +1,50 @@
 <!-- login.component.html -->
 
 <div class="container container-fluid shadow-sm" [class.sign-up-mode]="!isSignIn">
+  <div *ngIf="showEmailError">{{ emailErrorMessage }}</div>
+<div *ngIf="showPasswordError">{{ passwordErrorMessage }}</div>
   <div class="forms-container">
     <div class="signin-signup">
-      <form *ngIf="isSignIn" class="sign-in-form" (ngSubmit)="onLogin()">
+      <!-- debut connexion -->
+      <form *ngIf="isSignIn" class="sign-in-form" (ngSubmit)="login()">
         <h2 class="title">Se connecter</h2>
         <div class="input-field">
           <i class="fas fa-user"></i>
-          <input type="text" placeholder="Veuillez entrer votre mail" [(ngModel)]="username" />
+          <input type="email" placeholder="Veuillez entrer votre mail" [(ngModel)]="email" name="email "/>
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
-          <input type="password" placeholder="Veuillez entrer votre mot de passe" [(ngModel)]="password" />
+          <input type="password" placeholder="Veuillez entrer votre mot de passe" [(ngModel)]="password" name="password"/>
         </div>
         <input type="submit" value="Se connecter" class="btn solid" />
       </form>
+      <!-- fin connexion -->
+      <!-- debut inscription -->
       <form *ngIf="!isSignIn" class="sign-up-form" (ngSubmit)="onRegister()">
         <h2 class="title">S'inscrire</h2>
         <div class="input-field">
           <i class="fas fa-user"></i>
-          <input type="text" placeholder="Nom" [(ngModel)]="username" />
+          <input type="text" placeholder="Nom" [(ngModel)]="username" name="username"/>
         </div>
         <div class="input-field">
           <i class="fas fa-envelope"></i>
-          <input type="email" placeholder="Email" [(ngModel)]="email" />
+          <input type="email" placeholder="Email" [(ngModel)]="email" name="email"/>
         </div>
         <div class="input-field">
           <i class="fas fa-user"></i>
-          <input type="text" placeholder="Numero de telephone" [(ngModel)]="phoneNumber" />
+          <input type="text" placeholder="Address" [(ngModel)]="adresse" name="adresseH"/>
+        </div>
+        <div class="input-field">
+          <i class="fas fa-user"></i>
+          <input type="number" placeholder="Numero de telephone" [(ngModel)]="phoneNumber" name="phoneNumber"/>
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
-          <input type="password" placeholder="Password" [(ngModel)]="registerPassword" />
+          <input type="password" placeholder="Password" [(ngModel)]="registerPassword" name="registerPassword" />
         </div>
         <input type="submit" class="btn" value="S'inscrire" />
       </form>
+      <!-- fin inscription -->
     </div>
   </div>
 
