--- a/src/app/Restaurateur/menu/menu.component.html
+++ b/src/app/Restaurateur/menu/menu.component.html
@@ -1,5 +1,4 @@
 <!-- <app-dashboard-admin></app-dashboard-admin> -->
-
 <!-- debut du contenu de la page blog dashboard admin -->
 <div>
     <h3 class="text-center mt-2 fw-bold titremere-blog">Listes des plats</h3>
@@ -20,7 +19,68 @@
       <div class="card border mb-2 rounded-4 ">
         <img src="" alt="">
         <div class="bodyplat px-4">
-          <h3 class="mt-3 text-center">Yassa</h3>
+          <h3 class="mt-3 text-center">Nom plat</h3>
+          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
+          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
+          <div class="btnplat mb-3 d-flex justify-content-center">
+            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
+            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
+            <button class="btn  boutonsupprim-blog">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card border mb-2 rounded-4 ">
+        <img src="" alt="">
+        <div class="bodyplat px-4">
+          <h3 class="mt-3 text-center">Nom plat</h3>
+          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
+          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
+          <div class="btnplat mb-3 d-flex justify-content-center">
+            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
+            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
+            <button class="btn  boutonsupprim-blog">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card border mb-2 rounded-4 ">
+        <img src="" alt="">
+        <div class="bodyplat px-4">
+          <h3 class="mt-3 text-center">Nom plat</h3>
+          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
+          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
+          <div class="btnplat mb-3 d-flex justify-content-center">
+            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
+            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
+            <button class="btn  boutonsupprim-blog">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card border mb-2 rounded-4 ">
+        <img src="" alt="">
+        <div class="bodyplat px-4">
+          <h3 class="mt-3 text-center">Nom plat</h3>
+          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
+          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
+          <div class="btnplat mb-3 d-flex justify-content-center">
+            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
+            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
+            <button class="btn  boutonsupprim-blog">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card border mb-2 rounded-4 ">
+        <img src="" alt="">
+        <div class="bodyplat px-4">
+          <h3 class="mt-3 text-center">Nom plat</h3>
+          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
           <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
           <div class="btnplat mb-3 d-flex justify-content-center">
             <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
@@ -70,12 +130,17 @@
         <div class="modal-body">
             <form class="ajoutplat">
               <div class="mb-3">
-                <label for="titreplat">Titre de l'plat:</label>
+                <label for="titreplat">Titre du plat:</label>
                 <input class="form-control" type="text" id="titreplat" name="titreplat" required>
               </div>
   
               <div class="mb-4">
-                <label for="inputImage" class="form-label fw-bold">Image</label>
+                <label for="inputImage" class="form-label">Prix</label>
+                <input type="text" class="form-control" id="inputGroupFile02" name="platPhoto">
+              </div>
+
+              <div class="mb-4">
+                <label for="inputImage" class="form-label ">Image</label>
                 <input type="text" class="form-control" id="inputGroupFile02" name="platPhoto">
               </div>
             
@@ -110,6 +175,11 @@
               </div>
             
               <div class="mb-3">
+                <label for="editPhoto">Nouvelle Prix:</label>
+                <input id="editPhoto " class="form-control" name="photo" required>
+              </div>
+
+              <div class="mb-3">
                 <label for="editPhoto">Nouvelle photo:</label>
                 <input id="editPhoto " class="form-control" name="photo" required>
               </div>
@@ -136,7 +206,7 @@
   <div class="modal-dialog modal-dialog-scrollable modal-lg modal-sm">
     <div class="modal-content container">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="detailplatLabel">Details de l'plat</h1>
+        <h1 class="modal-title fs-5" id="detailplatLabel">Details du plat</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -144,13 +214,13 @@
           <div class="row">
             <div class="col">
            <div class="w-75 mx-auto">
-            <img class="img-fluid rounded-4 imageplat-detailblog"  alt="" >
+            <img class="img-fluid rounded-4 imageplat-detailblog" src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" >
            </div>
            <div>
-            <h2 class="text-center"></h2>
+            <h2 class="text-start">Prix: 1500 fcfa</h2>
            </div>
            <div>
-            <p class="text-center"></p>
+            <p class="text-start">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum praesentium at neque ex saepe beatae, ullam modi aut nobis in non numquam rem tenetur ab nulla consequatur soluta sunt eaque.</p>
            </div>
           </div>
         </div>    
@@ -158,7 +228,7 @@
       </div>
       <div class="modal-footer">
         <div class="d-flex justify-content-end mb-4 mx-2">
-          <button class="btn btn-primary me-3" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Commentaires</button>
+          <button class="btn btnUpdate me-3" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Commentaires</button>
           <button class="btn btnCloseDetail" data-bs-dismiss="modal">Fermer</button>
         </div>
       </div>
@@ -169,7 +239,7 @@
   <div class="modal-dialog modal-dialog-centered modal-lg modal-sm ">
     <div class="modal-content container">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Commentaires</h1>
+        <h1 class="modal-title fs-5 " id="exampleModalToggleLabel2">Commentaires</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
