--- a/src/app/Module/login/login.component.html
+++ b/src/app/Module/login/login.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="input-field">
           <i class="fas fa-envelope"></i>
-          <input type="email" placeholder="Email" [(ngModel)]="email" name="email"/>
+          <input type="email" placeholder="Email" [(ngModel)]="email" name="registerEmail"/>
         </div>
         <div class="input-field">
           <i class="fas fa-user"></i>
