--- a/src/app/Administrateur/accueil-admin/accueil-admin.component.html
+++ b/src/app/Administrateur/accueil-admin/accueil-admin.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<app-dashboard-admin></app-dashboard-admin>
+<!-- <div class="row">
     <div class="col-xl-3 col-sm-6 col-12"> 
       <div class="card">
         <div class="card-content">
@@ -50,4 +51,4 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
