--- a/src/app/Module/header/header.component.html
+++ b/src/app/Module/header/header.component.html
@@ -1,5 +1,5 @@
 
-<nav role="navigation" class="nav w-100 ">
+<nav role="navigation" class="nav w-100  ">
     <a class="menu-toggle" href="#head-nav">
       <span aria-hidden="true" class="icon-menu"></span><span class="menu-toggle-text"> menu</span>
     </a>
@@ -26,10 +26,10 @@
       <li class="menu-item iconeChange">
         <ul>
           <li>
-            <a href=""><i class="bi bi-person personalite"></i></a> 
+            <a href="" routerLink="/login"><i class="bi bi-person personalite"></i></a> 
           </li>
           <li>
-            <a href=""><i class="bi bi-cart3 panierbi"></i></a>
+            <a href="#" routerLink="/panier" routerLinkActive="active"><i class="bi bi-cart3 panierbi"></i></a>
           </li>
         </ul>
       </li>
