--- a/src/app/Module/login/login.component.html
+++ b/src/app/Module/login/login.component.html
@@ -1,8 +1,6 @@
 <!-- login.component.html -->
 
 <div class="container container-fluid shadow-sm" [class.sign-up-mode]="!isSignIn">
-  <div *ngIf="showEmailError">{{ emailErrorMessage }}</div>
-<div *ngIf="showPasswordError">{{ passwordErrorMessage }}</div>
   <div class="forms-container">
     <div class="signin-signup">
       <!-- debut connexion -->
@@ -10,7 +8,7 @@
         <h2 class="title">Se connecter</h2>
         <div class="input-field">
           <i class="fas fa-user"></i>
-          <input type="email" placeholder="Veuillez entrer votre mail" [(ngModel)]="email" name="email "/>
+          <input type="email" placeholder="Veuillez entrer votre mail" [(ngModel)]="email" name="email" required/>
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
@@ -28,15 +26,15 @@
         </div>
         <div class="input-field">
           <i class="fas fa-envelope"></i>
-          <input type="email" placeholder="Email" [(ngModel)]="email" name="registerEmail"/>
+          <input type="email" placeholder="Email" [(ngModel)]="registerEmail" name="registerEmail"/>
         </div>
         <div class="input-field">
           <i class="fas fa-user"></i>
-          <input type="text" placeholder="Address" [(ngModel)]="adresse" name="adresseH"/>
+          <input type="text" placeholder="Address" [(ngModel)]="adresse" name="adresse"/>
         </div>
         <div class="input-field">
           <i class="fas fa-user"></i>
-          <input type="number" placeholder="Numero de telephone" [(ngModel)]="phoneNumber" name="phoneNumber"/>
+          <input type="number" placeholder="Numero de telephone" [(ngModel)]="phone" name="phone"/>
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
