--- a/src/app/Administrateur/categorie/categorie.component.html
+++ b/src/app/Administrateur/categorie/categorie.component.html
@@ -1,3 +1,5 @@
+<app-dashboard-admin></app-dashboard-admin>
+<section class="contenumilieux">
 <div>
   <h3 class="text-center mt-2 fw-bold titremere-blog">Listes des categories</h3>
   <div class="d-flex justify-content-between">
@@ -74,21 +76,22 @@
           <button type="button" class="btn btn-closeAjout" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-lg"></i></button>
         </div>
         <div class="modal-body">
-            <form class="mdfcategorie">
-              <div class="mb-3">
-                <label for="editTitle">Nouveau titre:</label>
-                <input id="editTitle" class="form-control" name="titre" required>
-              </div>
-          
-              <div class="mdfBtns d-flex justify-content-between">
-                <button type="submit" class="btn btnUpdate" data-bs-dismiss="modal">Enregistrer</button>
-                <button type="button" class="btn btnAnnuler" data-bs-dismiss="modal" >Annuler</button>
-              </div>
-            </form>
+          <form class="mdfcategorie" (ngSubmit)="editcategorie(editingCategory.id, editedType)">
+            <div class="mb-3">
+              <label for="editTitle">Nouveau titre:</label>
+              <input id="editTitle" class="form-control" name="titre" required [(ngModel)]="editedType">
+            </div>
+  
+            <div class="mdfBtns d-flex justify-content-between">
+              <button type="submit" class="btn btnUpdate" data-bs-dismiss="modal">Enregistrer</button>
+              <button type="button" class="btn btnAnnuler" data-bs-dismiss="modal">Annuler</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
   <!-- fin du model de modification  -->
 <!-- les modalles -->
+</section>
   
