--- a/src/app/Administrateur/client/client.component.html
+++ b/src/app/Administrateur/client/client.component.html
@@ -1,3 +1,5 @@
+<app-dashboard-admin></app-dashboard-admin>
+<section class="milieuxcontenu">
 <div class="card w-75"style="margin-top:8%;border:2px solid red;margin-left:15%;border:1px solid #F7E801;">
     <div class="card-body">
       <table class="table">
@@ -119,3 +121,4 @@
     </div>
     </div>
     <!-- fin du model plat details -->
+  </section>
