--- a/src/app/Restaurateur/commentaire/commentaire.component.html
+++ b/src/app/Restaurateur/commentaire/commentaire.component.html
@@ -1,1 +1,4 @@
-<p>commentaire works!</p>
+<app-dashboard-admin></app-dashboard-admin>
+<section class="home-section">
+    <p>commentaire </p>
+</section>
