--- a/src/app/Administrateur/accueil-admin/accueil-admin.component.html
+++ b/src/app/Administrateur/accueil-admin/accueil-admin.component.html
@@ -1,54 +1,51 @@
 <app-dashboard-admin></app-dashboard-admin>
-<!-- <div class="row">
-    <div class="col-xl-3 col-sm-6 col-12"> 
-      <div class="card">
-        <div class="card-content">
-          <div class="card-body">
-            <div class="media d-flex">
-              <div class="align-self-center">
-                <i class="bi bi-person-standing fw-bold display-2"></i>
-              </div>
-              <div class="media-body text-right">
-                <h3>278</h3>
-                <span>New Posts</span>
-              </div>
-            </div>
+<section class="contenumilieux">
+  <div class="home-content">
+    <div class="overview-boxes">
+      <div class="box">
+        <div class="right-side">
+          <div class="box-topic">Total Order</div>
+          <div class="number">40,876</div>
+          <div class="indicator">
+            <i class="bx bx-up-arrow-alt"></i>
+            <span class="text">Up from yesterday</span>
           </div>
         </div>
+        <i class="bx bx-cart-alt cart"></i>
       </div>
-    </div>
-    <div class="col-xl-3 col-sm-6 col-12">
-      <div class="card">
-        <div class="card-content">
-          <div class="card-body">
-            <div class="media d-flex">
-              <div class="align-self-center">
-                <i class="bi bi-houses fw-bold display-2"></i>
-              </div>
-              <div class="media-body text-right">
-                <h3>156</h3>
-                <span>New Comments</span>
-              </div>
-            </div>
+      <div class="box">
+        <div class="right-side">
+          <div class="box-topic">Total Sales</div>
+          <div class="number">38,876</div>
+          <div class="indicator">
+            <i class="bx bx-up-arrow-alt"></i>
+            <span class="text">Up from yesterday</span>
           </div>
         </div>
+        <i class="bx bxs-cart-add cart two"></i>
       </div>
-    </div>
-    <div class="col-xl-3 col-sm-6 col-12">
-      <div class="card">
-        <div class="card-content">
-          <div class="card-body">
-            <div class="media d-flex">
-              <div class="align-self-center">
-                <i class="bi bi-currency-exchange fw-bold display-2"></i>             
-             </div>
-              <div class="media-body text-right">
-                <h3>64.89 %</h3>
-                <span>Bounce Rate</span>
-              </div>
-            </div>
+      <div class="box">
+        <div class="right-side">
+          <div class="box-topic">Total Profit</div>
+          <div class="number">$12,876</div>
+          <div class="indicator">
+            <i class="bx bx-up-arrow-alt"></i>
+            <span class="text">Up from yesterday</span>
           </div>
         </div>
+        <i class="bx bx-cart cart three"></i>
+      </div>
+      <div class="box">
+        <div class="right-side">
+          <div class="box-topic">Total Return</div>
+          <div class="number">11,086</div>
+          <div class="indicator">
+            <i class="bx bx-down-arrow-alt down"></i>
+            <span class="text">Down From Today</span>
+          </div>
+        </div>
+        <i class="bx bxs-cart-download cart four"></i>
       </div>
     </div>
-  </div> -->
+  </div>
+</section>
