--- a/src/app/Administrateur/message/message.component.html
+++ b/src/app/Administrateur/message/message.component.html
@@ -1,1 +1,4 @@
-<p>message works!</p>
+<app-dashboard-admin></app-dashboard-admin>
+<section class="home-section">
+    <p>message works!</p>
+</section>
