--- a/src/app/Restaurateur/commande/commande.component.css
+++ b/src/app/Restaurateur/commande/commande.component.css
@@ -4,6 +4,14 @@
     --creame:#F8F3C6;
     --argent:#F1F2F3;
 }
+.home-section{
+    position: relative;
+    background: #f5f5f5;
+    min-height: 100vh;
+    width: calc(100% - 240px);
+    left: 240px;
+    transition: all 0.5s ease;
+  }
 .boutonajouter-blog{
     color: #FFA07A;
     border: 2px solid #FFA07A ;
