--- a/src/app/Restaurateur/commande/commande.component.html
+++ b/src/app/Restaurateur/commande/commande.component.html
@@ -1,3 +1,5 @@
+<app-dashboard-admin></app-dashboard-admin>
+<section class="home-section">
 <div>
     <h3 class="text-center mt-2 fw-bold titremere-blog">Les commandes</h3>
     <div class="d-flex justify-content-between">
@@ -58,3 +60,5 @@
       </table>
     </div>
   </div>
+  
+</section>
