--- a/src/app/Restaurateur/menu/menu.component.html
+++ b/src/app/Restaurateur/menu/menu.component.html
@@ -1,4 +1,5 @@
-<!-- <app-dashboard-admin></app-dashboard-admin> -->
+<app-dashboard-admin></app-dashboard-admin>
+<section class="home-section">
 <!-- debut du contenu de la page blog dashboard admin -->
 <div>
     <h3 class="text-center mt-2 fw-bold titremere-blog">Listes des plats</h3>
@@ -267,3 +268,4 @@
   </div>
   </div>
   <!-- fin du model plat details -->
+</section>
